DC Hamburguer adicionando meta tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Projeto DC"/>
-    <meta property="og:image" content="Projeto DC"/>
+    <meta property="og:image" content="https://dc-hamburgueria.vercel.app/src/assets/hamb-1.png"/>
     <meta property="og:description" content="Teste para whatsap"/>
     <meta property="og:site_name" content="DC Hamburgueria"/>
 
